# easier-data

./: .gitignore  LICENSE  LICENSE.md  README.md  SECURITY.md  __init__.py  easier_data.py  main.py  plotting.ipynb  pyproject.toml  ruff.toml  testing.ipynb  ty.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: codeql.yml  python-publish.yml
easier_data/: __init__.py  _mosaics.py  _types.py  arrays.py  points.py  shapes.py  stats.py  styles.py  themes.py  vectors.py
easier_data/_internal/: _types.py  constants.py  errors.py
