[project]
name = "easier-data"
version = "1.0.0b4"
description = "Python package for managing data and plotting easier"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "custom-warnings>=1.0.0",
    "filelock>=3.20.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "accurate-benchmark>=4.0.0",
    "jupyter>=1.1.1",
    "ruff>=0.14.14",
    "scipy-stubs>=1.17.0.2",
    "tabulate>=0.9.0",
    "ty>=0.0.21",
]

[tool.ruff]
respect-gitignore = false

[tool.ruff.lint]
select = ["RUF", "PL", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = true

[tool.ty.rules]
redundant-cast = "ignore"
