[project]
name = "easier-data"
version = "1.0.0b4"
description = "Python package for managing data and plotting easier"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "custom-warnings>=1.0.0",
    "filelock>=3.25.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "accurate-benchmark>=4.0.0",
    "jupyter>=1.1.1",
    "ruff>=0.15.5",
    "scipy-stubs>=1.17.1.1",
    "tabulate>=0.10.0",
    "ty>=0.0.21",
]

[tool.ruff]
respect-gitignore = false

[tool.ruff.lint]
select = ["RUF", "PL", "I"]

[tool.ruff.lint.isort]
lines-after-imports = 2
order-by-type = true

[tool.ty.rules]
redundant-cast = "ignore"
